--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.fileupload.jar=C:\\Users\\Daniel\\Documents\\Cursos\\JAVA EE\\e-Commerce en JAVA EE,JSP,JSTL con pagos PAYPAL y PayU Latam\\Seccion 6 - Capa de presentaci\u00f3n (GUI) y Servlet (control)\\LibreriasSubidaImagen\\fileupload.jar
+file.reference.io.jar=C:\\Users\\Daniel\\Documents\\Cursos\\JAVA EE\\e-Commerce en JAVA EE,JSP,JSTL con pagos PAYPAL y PayU Latam\\Seccion 6 - Capa de presentaci\u00f3n (GUI) y Servlet (control)\\LibreriasSubidaImagen\\io.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -37,7 +39,9 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.fileupload.jar}:\
+    ${file.reference.io.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
